# random_lib_hao

./: CMakeLists.txt  Makefile  README
inc/: CMakeLists.txt  random_hao.h
src/: CMakeLists.txt  random_hao.cpp
test/: CMakeLists.txt  random_hao_test.cpp  test_all.cpp
